Exercise5 html file changed

--- a/Exercise5.html
+++ b/Exercise5.html
@@ -14,8 +14,8 @@
       grid-template-columns: repeat(2, 250px);
       padding: 5px;
       /* justify-items: end; */
-      justify-items: start;
-      /* justify-items: center; */
+      /* justify-items: start; */
+      justify-items: center;
     }
     .box {
       width: 200px;
